--- a/1.htm
+++ b/1.htm
@@ -3,28 +3,33 @@
 <body>
   <h1>noip No.1</h1>
   <p>
-  Linux
+  <h3>Linux</h3>
 	Linux是一套免费使用和自由传播的类Unix操作系统，是一个基于POSIX和UNIX的多用户、多任务、支持多线程和多CPU的操作系统。它能运行主要的UNIX工具软件、应用程序和网络协议。它支持32位和64位硬件。Linux继承了Unix以网络为核心的设计思想，是一个性能稳定的多用户网络操作系统。
 	Linux操作系统诞生于1991 年10 月5 日（这是第一次正式向外公布时间）。Linux存在着许多不同的Linux版本，但它们都使用了Linux内核。Linux可安装在各种计算机硬件设备中，比如手机、平板电脑、路由器、视频游戏控制台、台式计算机、大型机和超级计算机。
   严格来讲，Linux这个词本身只表示Linux内核，但实际上人们已经习惯了用Linux来形容整个基于Linux内核，并且使用GNU 工程各种工具和数据库的操作系统。
-  </br>
-  Solaris
+<br>
+  <h3>Solaris</h3>
+
 	Solaris是Sun Microsystems研发的计算机操作系统。它被认为是UNIX操作系统的衍生版本之一。 目前Solaris属于混合开源软件。2005年6月14日，Sun公司将正在开发中的Solaris 11的源代码以CDDL许可开放，这一开放版本就是OpenSolaris。
-  </br>
-  塞班系统
+<br>
+  <h3>塞班系统</h3>
+  
 	Symbian系统是塞班公司为手机而设计的操作系统。2008年12月2日，塞班公司被诺基亚收购。2011年12月21日，诺基亚官方宣布放弃塞班（Symbian）品牌。由于缺乏新技术支持，塞班的市场份额日益萎缩。截止至2012年2月，塞班系统的全球市场占有量仅为3%。2012年5月27日，诺基亚彻底放弃开发塞班系统，但是服务将一直持续到2016年。2013年1月24日晚间，诺基亚宣布，今后将不再发布塞班系统的手机，意味着塞班这个智能手机操作系统，在长达14年的历史之后，终于迎来了谢幕。2014年1月1日，诺基亚正式停止了Nokia Store应用商店内对塞班应用的更新，也禁止开发人员发布新应用。
 	Symbian是一个实时性、多任务的纯32位操作系统，具有功耗低、内存占用少等特点，在有限的内存和运存情况下，非常适合手机等移动设备使用，经过不断完善，可以支持GPRS、蓝牙、SyncML、NFC以及3G技术。它包含联合的数据库、使用者界面架构和公共工具的参考实现，它的前身是Psion的EPOC。最重要的是它是一个标准化的开放式平台，任何人都可以为支持Symbian的设备开发软件。与微软产品不同的是，Symbian将移动设备的通用技术，也就是操作系统的内核，与图形用户界面技术分开，能很好的适应不同方式输入的平台，也使厂商可以为自己的产品制作更加友好的操作界面，符合个性化的潮流，这也是用户能见到不同样子的symbian系统的主要原因。为这个平台开发的java程序在互联网上盛行。用户可以通过安装软件，扩展手机功能。
-  </br>
-  sybase
+<br>
+  <h3>sybase</h3>
+  
 	美国Sybase公司研制的一种关系型数据库系统，是一种典型的UNIX或WindowsNT平台上客户机/服务器环境下的大型数据库系统。 Sybase提供了一套应用程序编程接口和库，可以与非Sybase数据源及服务器集成，允许在多个数据库之间复制数据，适于创建多层应用。系统具有完备的触发器、存储过程、规则以及完整性定义，支持优化查询，具有较好的数据安全性。Sybase通常与SybaseSQLAnywhere用于客户机/服务器环境，前者作为服务器数据库，后者为客户机数据库，采用该公司研制的PowerBuilder为开发工具，在我国大中型系统中具有广泛的应用。
 	Adaptive Server Enterprise (ASE) 是 Sybase 的旗舰式 RDBMS 产品，一直致力于以最低的系统总拥有成本 (TCO) 为企业提供一个高性能的数据和事务处理系统。最新版 ASE12.5.1/12.5.2 在继续保持以前版本的关键业务性能和高效计算的同时，在易用性、系统性能和支持新应用程序方面进行了增强和改进, 并进一步提高了系统安全和 Linux 的可扩展性。Sybase Adaptive Server Enterprise 12.5.1 完善和扩展了 ASE 产品系列。
-  </br>
-  Windows Vista
+	<br>
+  <h3>Windows Vista</h3>
+ 
 	Windows Vista是 [1]  Microsoft公司所研发的具有创新历史意义的一个版本，其内核版本号为Windows NT 6.0。
 2005年7月22日，微软宣布 Windows Vista 为这款新操作系统的名字。微软于2006 年11月2日完成GA版本，向OEM 和企业用户发布。2007年1月30日，正式向普通用户出售，这是Windows 历史上间隔时间最久的一次发布。
 Windows Vista较上一个版本Windows XP增加了上百种新功能，其中包括被称为“Aero”的全新图形用户界面 [2]  、加强后的搜索功能（Windows Indexing Service）、新的媒体创作工具（例如Windows DVD Maker）以及重新设计的网络、音频、输出（打印）和显示子系统。Vista也使用点对点技术（Peer-to-peer）提升了计算机系统在家庭网络中的显示通信能力，将让在不同计算机或装置之间分享文件与多媒体内容变得更简单。针对开发者的方面，Windows Vista使用.NET Framework 3.0版本，比起传统的Windows API更能让开发者能简单写出高品质的程序。微软也在Vista的安全性方面进行改良，Vista较Windows XP增加了用户管理机制（UAC）以及内置的恶意软件查杀工具（Windows Defender）等。
 	2011年7月12日，微软已终止Service Pack 1的支持。2012年4 月10 日，微软已终止Windows Vista的主流技术支持；
 根据微软发出的公告显示，该公司于2017年4 月11 日正式终止对Windows Vista 的一切支持。至此，Windows Vista 寿终正寝。
-  </br>
+  <br>
+  </p>
 </body>
 </html>
