--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -15,7 +15,7 @@
 		</h4>
 		<br/>
 		<p style="text-align:center;font-size:8px;font-family:time">Tap to download</p>
-		<a href="https://steve0618.github.io/edit/master/file/Vannerglory%203D%20Model/GongSunLi.fbx" style="text-align:center;font-size:8px;font-family:time">GongSunLi.fbx</a>
+		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" style="text-align:center;font-size:8px;font-family:time">GongSunLi.fbx</a>
     </body>
     <br/>
 	<hr/>
