--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -8,14 +8,14 @@
     </head>
     
     <body>
-		<h4 style="font-color:grey">
+		<h4 style="font-color:blue;text-align:center">
 		This is Vannerglory 3D model.<br/>
 		ONLY for study but not for commercial use.<br/>
 		You're supposed to delete 24 hours later after you've download it.
 		</h4>
 		<br/>
 		<p style="text-align:center;font-size:8px;font-family:time">Tap to download</p>
-		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" style="text-align:center;font-size:8px;font-family:time">GongSunLi.fbx</a>
+		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" align="center">GongSunLi.fbx</a>
     </body>
     <br/>
 	<hr/>
