--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -15,7 +15,7 @@
 		</h4>
 		<br/>
 		<p style="text-align:center;font-size:8px;font-family:time">Tap to download</p>
-		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" align="center">GongSunLi.fbx</a>
+		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" style="display:inline-block;text-align:center">GongSunLi.fbx</a>
     </body>
     <br/>
 	<hr/>
