--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -14,8 +14,10 @@
 		You're supposed to delete 24 hours later after you've download it.
 		</h4>
 		<br/>
-		<p style="text-align:center;font-size:8px;font-family:time">Tap to download</p>
-		<a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" style="display:block;text-align:center">GongSunLi.fbx</a>
+		<p style="text-align:center;font-size:12px;font-family:time">Tap to download</p>
+	    	<div style="text-align:center">
+		    <a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" >GongSunLi.fbx</a>
+		</div>    
     </body>
     <br/>
 	<hr/>
