--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -14,7 +14,7 @@
 		You're supposed to delete 24 hours later after you've download it.
 		</h4>
 		<br/>
-		<p style="text-align:center;font-size:12px;font-family:time">Tap to download</p>
+		<p style="text-align:center;size:12px;font-family:time">Tap to download</p>
 	    	<div style="text-align:center">
 		    <a href="https://steve0618.github.io/file/Vannerglory%203D%20Model/GongSunLi.fbx" >GongSunLi.fbx</a>
 		</div>    
