--- a/webview/noip1.htm
+++ b/webview/noip1.htm
@@ -1,7 +1,7 @@
 <html>
 <title>noip No.1</title>
 <body>
-  <h1>noip No.1</h1>
+  <h1 style="text-align:center">noip No.1</h1>
   <p>
   <h3>Linux</h3>
 	Linux是一套免费使用和自由传播的类Unix操作系统，是一个基于POSIX和UNIX的多用户、多任务、支持多线程和多CPU的操作系统。它能运行主要的UNIX工具软件、应用程序和网络协议。它支持32位和64位硬件。Linux继承了Unix以网络为核心的设计思想，是一个性能稳定的多用户网络操作系统。
