--- a/webview/noip1.htm
+++ b/webview/noip1.htm
@@ -1,39 +1,31 @@
 <html>
 <title>noip No.1</title>
 <body>
-  <h1 style="text-align:center">noip No.1</h1>
+  <h1 style="text-align:center;color:blue">操作系统知识</h1>
+  <hr/>
   <p>
-  <h3>Linux</h3>
-	Linux是一套免费使用和自由传播的类Unix操作系统，是一个基于POSIX和UNIX的多用户、多任务、支持多线程和多CPU的操作系统。它能运行主要的UNIX工具软件、应用程序和网络协议。它支持32位和64位硬件。Linux继承了Unix以网络为核心的设计思想，是一个性能稳定的多用户网络操作系统。
-	Linux操作系统诞生于1991 年10 月5 日（这是第一次正式向外公布时间）。Linux存在着许多不同的Linux版本，但它们都使用了Linux内核。Linux可安装在各种计算机硬件设备中，比如手机、平板电脑、路由器、视频游戏控制台、台式计算机、大型机和超级计算机。
-  严格来讲，Linux这个词本身只表示Linux内核，但实际上人们已经习惯了用Linux来形容整个基于Linux内核，并且使用GNU 工程各种工具和数据库的操作系统。
-<br>
-  <h3>Solaris</h3>
-
-	Solaris是Sun Microsystems研发的计算机操作系统。它被认为是UNIX操作系统的衍生版本之一。 目前Solaris属于混合开源软件。2005年6月14日，Sun公司将正在开发中的Solaris 11的源代码以CDDL许可开放，这一开放版本就是OpenSolaris。
-<br>
-  <h3>塞班系统</h3>
-  
-	Symbian系统是塞班公司为手机而设计的操作系统。2008年12月2日，塞班公司被诺基亚收购。2011年12月21日，诺基亚官方宣布放弃塞班（Symbian）品牌。由于缺乏新技术支持，塞班的市场份额日益萎缩。截止至2012年2月，塞班系统的全球市场占有量仅为3%。2012年5月27日，诺基亚彻底放弃开发塞班系统，但是服务将一直持续到2016年。2013年1月24日晚间，诺基亚宣布，今后将不再发布塞班系统的手机，意味着塞班这个智能手机操作系统，在长达14年的历史之后，终于迎来了谢幕。2014年1月1日，诺基亚正式停止了Nokia Store应用商店内对塞班应用的更新，也禁止开发人员发布新应用。
-	Symbian是一个实时性、多任务的纯32位操作系统，具有功耗低、内存占用少等特点，在有限的内存和运存情况下，非常适合手机等移动设备使用，经过不断完善，可以支持GPRS、蓝牙、SyncML、NFC以及3G技术。它包含联合的数据库、使用者界面架构和公共工具的参考实现，它的前身是Psion的EPOC。最重要的是它是一个标准化的开放式平台，任何人都可以为支持Symbian的设备开发软件。与微软产品不同的是，Symbian将移动设备的通用技术，也就是操作系统的内核，与图形用户界面技术分开，能很好的适应不同方式输入的平台，也使厂商可以为自己的产品制作更加友好的操作界面，符合个性化的潮流，这也是用户能见到不同样子的symbian系统的主要原因。为这个平台开发的java程序在互联网上盛行。用户可以通过安装软件，扩展手机功能。
-<br>
-  <h3>sybase</h3>
-  
-	美国Sybase公司研制的一种关系型数据库系统，是一种典型的UNIX或WindowsNT平台上客户机/服务器环境下的大型数据库系统。 Sybase提供了一套应用程序编程接口和库，可以与非Sybase数据源及服务器集成，允许在多个数据库之间复制数据，适于创建多层应用。系统具有完备的触发器、存储过程、规则以及完整性定义，支持优化查询，具有较好的数据安全性。Sybase通常与SybaseSQLAnywhere用于客户机/服务器环境，前者作为服务器数据库，后者为客户机数据库，采用该公司研制的PowerBuilder为开发工具，在我国大中型系统中具有广泛的应用。
-	Adaptive Server Enterprise (ASE) 是 Sybase 的旗舰式 RDBMS 产品，一直致力于以最低的系统总拥有成本 (TCO) 为企业提供一个高性能的数据和事务处理系统。最新版 ASE12.5.1/12.5.2 在继续保持以前版本的关键业务性能和高效计算的同时，在易用性、系统性能和支持新应用程序方面进行了增强和改进, 并进一步提高了系统安全和 Linux 的可扩展性。Sybase Adaptive Server Enterprise 12.5.1 完善和扩展了 ASE 产品系列。
-	<br>
-  <h3>Windows Vista</h3>
- 
-	Windows Vista是 [1]  Microsoft公司所研发的具有创新历史意义的一个版本，其内核版本号为Windows NT 6.0。
-2005年7月22日，微软宣布 Windows Vista 为这款新操作系统的名字。微软于2006 年11月2日完成GA版本，向OEM 和企业用户发布。2007年1月30日，正式向普通用户出售，这是Windows 历史上间隔时间最久的一次发布。
-Windows Vista较上一个版本Windows XP增加了上百种新功能，其中包括被称为“Aero”的全新图形用户界面 [2]  、加强后的搜索功能（Windows Indexing Service）、新的媒体创作工具（例如Windows DVD Maker）以及重新设计的网络、音频、输出（打印）和显示子系统。Vista也使用点对点技术（Peer-to-peer）提升了计算机系统在家庭网络中的显示通信能力，将让在不同计算机或装置之间分享文件与多媒体内容变得更简单。针对开发者的方面，Windows Vista使用.NET Framework 3.0版本，比起传统的Windows API更能让开发者能简单写出高品质的程序。微软也在Vista的安全性方面进行改良，Vista较Windows XP增加了用户管理机制（UAC）以及内置的恶意软件查杀工具（Windows Defender）等。
-	2011年7月12日，微软已终止Service Pack 1的支持。2012年4 月10 日，微软已终止Windows Vista的主流技术支持；
-根据微软发出的公告显示，该公司于2017年4 月11 日正式终止对Windows Vista 的一切支持。至此，Windows Vista 寿终正寝。
-  <br>
-
-<h3>其他操作系统</h3>
-
-	1956年<br>GM-NAA I/O<br>1959年<br>SHARE Operating System<br>1960年<br>IBSYS<br>1961年<br>CTSS<br>MCP (Burroughs Large Systems)<br>1962年<br>GCOS<br>1964年<br>EXEC 8 OS/360 （宣称）、 TOPS-10<br>1965年<br>Multics （宣称） OS/360 （上市）、 Tape Operating System （TOS）<br>1966年<br>DOS/360 （IBM）、MS/8<br>1967年<br>ACP （IBM）、CP/CMS、 ITS、WAITS<br>1969年<br>TENEX 、 Unix<br>1970年<br>DOS/BATCH 11 （PDP-11）<br>1971年<br>OS/8<br>1972年<br>MFT (operating system) 、 MVT、 RDOS、SVS、VM/CMS<br>1973年<br>Alto OS、RSX-11D、RT-11、VME<br>1974年<br>MVS （MVS/XA）<br>1975年<br>BS2000<br>1976年<br>CP/M、TOPS-20<br>1978年<br>Apple DOS 3.1 （苹果公司第一个操作系统）、TripOS、VMS<br>Lisp Machine （CADR）<br>1979年<br>POS、NLTSS<br>1980年<br>OS-9、QDOS、SOS、XDE (Tajo)、Xenix<br>1981年<br>MS-DOS<br>1982年<br>Commodore DOS、SunOS (1.0)、Ultrix<br>1983年<br>Lisa OS、Coherent、Novell NetWare、ProDOS<br>1984年<br>Macintosh OS （系统 1.0）、MSX-DOS、QNX、UniCOS<br>1985年<br>AmigaOS、Atari TOS、MIPS OS、Oberon operating system、Microsoft Windows 1.0 （Windows第一版）<br>1986年<br>AIX、GS-OS、HP-UX<br>1987年<br>Arthur、IRIX （SGI推出的第一个版本号是3.0）、Minix、OS/2 （1.0）、Microsoft Windows 2.0<br>1988年<br>A/UX （苹果电脑）、LynxOS、MVS/ESA、OS/400<br>1989年<br>1989年、NeXTSTEP （1.0）、RISC OS、SCO Unix （第三版）<br>1990年<br>Amiga OS 2.0、BeOS （v1）、OSF/1、Microsoft Windows 3.0<br>1991年<br>SunOS 4.1.x、Linux<br>1992年<br>386BSD 0.1、Amiga OS 3.0、Solaris 2.0 （SunOS 4.x的继承者，以SVR4为基础，而非BSD）、Microsoft Windo、s 3.1<br>1993年<br>Solaris 2.1、Solaris 2.2、Solaris 2.3、Plan 9 （第一版）、FreeBSD、NetBSD、Microsoft Windows NT 3.1 （第一版NT）<br>1994年<br>Solaris 2.4<br>1995年<br>Solaris 2.5、Digital UNIX （aka Tru64）、OpenBSD、OS/390、Microsoft Windows 95<br>1996年<br>Microsoft Windows95 OSR2(OSR=OEMServicerelease) (即：Windows 97)、Microsoft Windows NT 4.0<br>1997年<br>Solaris 2.6、Inferno、Mac OS 7.6 （第一版官方正式命名为Mac OS）、SkyOS<br>1998年<br>Solaris 7 （第一款64位元Solaris版本，是2.7舍弃主版本号的称谓）、Microsoft Windows 98<br>1999年<br>AROS、Mac OS 8、Microsoft Windows 98 Second Edition<br>2000年<br>Solaris 8、AtheOS、Mac OS 9、MorphOS、Microsoft Windows 2000、Microsoft Windows Me、Mac OS X Public Beta （公开测试版）（2000年9月13日）<br>2001年<br>Mac OS X 10.0 Cheetah（印度豹）（2001年3月24日）、Amiga OS 4.0 （2001年5月）、Mac OS X 10.1 Puma（美洲狮）（2001年9月25日）、Microsoft Windows XP、z/OS<br>2002年<br>Solaris 9 for SPARC、Microsoft Windows XP 64-bit Edition、Windows XP Tablet PC Edition、Windows XP Media Center Edition、Syllable、Mac OS X 10.2 Jaguar（美洲虎）（2002年8月23日）<br>2003年<br>Solaris 9 for x86、Microsoft Windows Server 2003 （2003年3月28日）、Microsoft Windows XP 64-bit Edition - 以Microsoft Windows Server 2003为基础，同一天释出。、Mac OS X 10.3 Panther（黑豹）（2003年10月24日）<br>2004年<br>Microsoft Windows XP Media Center Edition<br>2005年<br>Solaris 10、Microsoft Windows XP Professional x64 Edition、Mac OS X 10.4 Tiger（老虎）（2005年4月29日）<br>2006年<br>Microsoft Windows Vista、Linux Mint、iOS（原名iPhone OS）<br>2007年<br>Mac OS X 10.5 Leopard（美洲豹）（2007年10月26日）<br>2008年<br>Ubuntu 8.04 LTS、OpenSolaris 08/05、Android、Ubuntu 8.10、OpenSolaris 08/11、Windows Server 2008<br>2009年<br>Ubuntu 9.04、Mac OS X v10.6 Snow Leopard （雪豹）（2009年8月28日）、Windows Server 2008 R2、Windows 7、Ubuntu 9.10、Chrome OS<br>2010年<br>ubuntu 10.04、ubuntu 10.10、Windows Phone 7<br>2011年<br>Ubuntu 11.04、Ubuntu 11.10、Mac OS X 10.7 Lion<br>2012年<br>Ubuntu 12.04、Ubuntu 12.10、OS X 10.8 Mountain Lion、Microsoft Windows 8（2012年10月25日）、Mac OS X Server v10.4 “Tiger”、Microsoft Windows Server 2012、Windows Phone 8<br>2013年	Windows 8.1、Windows Server 2012 R2、Ubuntu 13.04、Mac OS X 10.9 Mavericks<br>2014年	<br>China Operating System（中国操作系统）、Ubuntu 14.04、Windows Phone 8.1<br>Common operating platform（中国通用操作平台 0.1）、Mac OS X v10.10Yosemite、<br>Windows Technical Preview、SteamOS<br>	
-	</p>
+    <h3 style="text-align:center">多任务操作系统</h3>
+    &emsp;所谓多道程序设计是指允许多个程序同时进入一个计算机系统的主存储器并运行这些程序的方法。这种多道程序系统也称为多任务操作系统。
+    <br/>
+    &emsp;多任务系统的特点可概括如下：<br/>
+&emsp;&emsp;(1)多道——主存中有两道以上的程序，且这些程序所对应的进程在任一时刻都处于就绪、运行、等待三个状态之一；<br/>
+&emsp;&emsp;(2)宏观上并行——宏观上看，这些程序都正在执行；<br/>
+&emsp;&emsp;(3)微观上串行——微观上看，这些程序所对应的诸进程正在交替地执行，因为任何一个时刻只能有一个进程在处理机(CPU)上执行的。<br/>
+&emsp;&emsp;</p style="color:red">(4)多任务操作系统可以在单核或单个CPU上运行。</p>
+   <br/><br/>
+   <h3 style="text-align:center">分时操作系统</h3>
+   &emsp;分时操作系统 (time-sharing system)，“分时”的含义：分时是指多个用户分享使用同一台计算机。多个程序分时共享硬件和软件资源。分时操作系统是指在一台主机上连接多个带有显示器和键盘的终端，同时允许多个用户通过主机的终端，以交互方式使用计算机，共享主机中的资源。分时操作系统是一个多用户交互式操作系统。分时操作系统，主要分为三类：单道分时操作系统，多道分时操作系统，具有前台和后台的分时操作系统。分时操作系统将CPU的时间划分成若干个片段，称为时间片。操作系统以时间片为单位，轮流为每个终端用户服务。<br/>
+   <h5>简介</h5>
+&emsp;并发操作这一概念很多计算机专业相关的人都有所了解了，它是为充分利用资源，提高资源利用率而实施的一种技术。其中CPU和通道并行操作，通道与通道并行操作，通道与I/O设备并行操作已成为现代计算机系统的基本特征。为了节省设备，CPU、通道和I/O设备之间的并行操作又按分时方式共享系统资源。与三种并行操作相应的有三种分时：CPU与通道分时使用内存、只读存贮器、数据通路等；通道和通道在分时操作的时候会使用CPU、内存、通道的公用控制部分等；同一通道中的I/O设备又分时使用内存、通道等。<br/>
+<h5>工作方式</h5>
+&emsp;分时(Time Sharing)操作系统的工作方式是：一台主机连接了若干个终端，每个终端有一个用户在使用。用户交互式地向系统提出命令请求，系统接受每个用户的命令，采用时间片轮转方式处理服务请求，并通过交互方式在终端上向用户显示结果。用户根据上步结果发出下道命令。分时操作系统将CPU的时间划分成若干个片段，称为时间片。操作系统以时间片为单位，轮流为每个终端用户服务。每个用户轮流使用一个时间片而使每个用户并不感到有别的用户存在。分时系统具有多路性、交互性、“独占”性和及时性的特征。多路性指，同时有多个用户使用一台计算机，宏观上看是多个人同时使用一个CPU，微观上是多个人在不同时刻轮流使用CPU。交互性是指，用户根据系统响应结果进一步提出新请求(用户直接干预每一步)。“独占”性是指，用户感觉不到计算机为其他人服务，就像整个系统为他所独占。及时性指，系统对用户提出的请求及时响应。<br/>
+<h5>系统特点</h5>
+&emsp;分时概念并不局限于上面说的三种，在多道程序环境中，分时系统的概念又增强了许多，而形成多道程序分时共享硬件和软件资源。如果每道程序一次运行一个时间片，而且都是经过用户终端和一个用户相连，用户就可以通过终端与之交互作用。虽然说有多个用户同时在使用该系统，但是他们并不会感觉到其他用户的存在，就好象整个系统就只有他一个人在使用一样，这样的系统称为分时系统或多路系统。我们可以很容易理解分时系统，它有如下特征：（1）同时性，计算机系统能被多个用户同时使用；（2）独立性：用户和用户之间都是独立操作系统的，在同时操作时并不会发生冲突，破坏，混淆等现象；（3）及时性：系统能以最快的速度将结果显示给用户；（4）交互作用性：用户能和电脑进行人机对话。<br/>
+<h5>分时操作系统基本思想</h5>
+&emsp;时间片：是把计算机的系统资源（尤其是CPU时间）进行时间上的分割，每个时间段称为一个时间片，每个用户依次轮流使用时间片。<br/>
+&emsp;分时技术：把处理机的运行时间分为很短的时间片，按时间片轮流把处理机分给各联机作业使用。 <br/>
+&emsp;分时操作系统：是一种联机的多用户交互式的操作系统。一般采用时间片轮转的方式使一台计算机为多个终端服务。对每个用户能保证足够快的响应时间，并提供交互会话能力。 <br/>
+&emsp;设计目标：对用户的请求及时响应，并在可能条件下尽量提高系统资源的利用率。<br/>
+  </p>
 </body>
 </html>
