--- a/webview/noip1.htm
+++ b/webview/noip1.htm
@@ -10,9 +10,10 @@
     &emsp;多任务系统的特点可概括如下：<br/>
 &emsp;&emsp;(1)多道——主存中有两道以上的程序，且这些程序所对应的进程在任一时刻都处于就绪、运行、等待三个状态之一；<br/>
 &emsp;&emsp;(2)宏观上并行——宏观上看，这些程序都正在执行；<br/>
-&emsp;&emsp;(3)微观上串行——微观上看，这些程序所对应的诸进程正在交替地执行，因为任何一个时刻只能有一个进程在处理机(CPU)上执行的。<br/>
+&emsp;&emsp;(3)微观上串行——微观上看，这些程序所对应的诸进程正在交替地执行，因为任何一个时刻只能有一个进程在处理机(CPU)上执行的。
 <p style="color:red">&emsp;&emsp;(4)多任务操作系统可以在单核或单个CPU上运行。</p>
-   <br/><br/>
+   <br/>
+   <p>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
    <h3 style="text-align:center">分时操作系统</h3>
    &emsp;分时操作系统 (time-sharing system)，“分时”的含义：分时是指多个用户分享使用同一台计算机。多个程序分时共享硬件和软件资源。分时操作系统是指在一台主机上连接多个带有显示器和键盘的终端，同时允许多个用户通过主机的终端，以交互方式使用计算机，共享主机中的资源。分时操作系统是一个多用户交互式操作系统。分时操作系统，主要分为三类：单道分时操作系统，多道分时操作系统，具有前台和后台的分时操作系统。分时操作系统将CPU的时间划分成若干个片段，称为时间片。操作系统以时间片为单位，轮流为每个终端用户服务。<br/>
    <h5>简介</h5>
