--- a/webview/noip1.htm
+++ b/webview/noip1.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <title>noip No.1</title>
 <body>
@@ -11,21 +12,23 @@
 &emsp;&emsp;(1)多道——主存中有两道以上的程序，且这些程序所对应的进程在任一时刻都处于就绪、运行、等待三个状态之一；<br/>
 &emsp;&emsp;(2)宏观上并行——宏观上看，这些程序都正在执行；<br/>
 &emsp;&emsp;(3)微观上串行——微观上看，这些程序所对应的诸进程正在交替地执行，因为任何一个时刻只能有一个进程在处理机(CPU)上执行的。
-<p style="color:red">&emsp;&emsp;(4)多任务操作系统可以在单核或单个CPU上运行。</p>
-   <p>-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+<div style="color:red">&emsp;&emsp;(4)多任务操作系统可以在单核或单个CPU上运行。</div>
+   <p>--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
    <h3 style="text-align:center">分时操作系统</h3>
    &emsp;分时操作系统 (time-sharing system)，“分时”的含义：分时是指多个用户分享使用同一台计算机。多个程序分时共享硬件和软件资源。分时操作系统是指在一台主机上连接多个带有显示器和键盘的终端，同时允许多个用户通过主机的终端，以交互方式使用计算机，共享主机中的资源。分时操作系统是一个多用户交互式操作系统。分时操作系统，主要分为三类：单道分时操作系统，多道分时操作系统，具有前台和后台的分时操作系统。分时操作系统将CPU的时间划分成若干个片段，称为时间片。操作系统以时间片为单位，轮流为每个终端用户服务。<br/>
-   <h5>简介</h5>
+   <h5 style="color:blue">简介</h5>
 &emsp;并发操作这一概念很多计算机专业相关的人都有所了解了，它是为充分利用资源，提高资源利用率而实施的一种技术。其中CPU和通道并行操作，通道与通道并行操作，通道与I/O设备并行操作已成为现代计算机系统的基本特征。为了节省设备，CPU、通道和I/O设备之间的并行操作又按分时方式共享系统资源。与三种并行操作相应的有三种分时：CPU与通道分时使用内存、只读存贮器、数据通路等；通道和通道在分时操作的时候会使用CPU、内存、通道的公用控制部分等；同一通道中的I/O设备又分时使用内存、通道等。<br/>
-<h5>工作方式</h5>
+<h5 style="color:blue">工作方式</h5>
 &emsp;分时(Time Sharing)操作系统的工作方式是：一台主机连接了若干个终端，每个终端有一个用户在使用。用户交互式地向系统提出命令请求，系统接受每个用户的命令，采用时间片轮转方式处理服务请求，并通过交互方式在终端上向用户显示结果。用户根据上步结果发出下道命令。分时操作系统将CPU的时间划分成若干个片段，称为时间片。操作系统以时间片为单位，轮流为每个终端用户服务。每个用户轮流使用一个时间片而使每个用户并不感到有别的用户存在。分时系统具有多路性、交互性、“独占”性和及时性的特征。多路性指，同时有多个用户使用一台计算机，宏观上看是多个人同时使用一个CPU，微观上是多个人在不同时刻轮流使用CPU。交互性是指，用户根据系统响应结果进一步提出新请求(用户直接干预每一步)。“独占”性是指，用户感觉不到计算机为其他人服务，就像整个系统为他所独占。及时性指，系统对用户提出的请求及时响应。<br/>
-<h5>系统特点</h5>
+<h5 style="color:blue">系统特点</h5>
 &emsp;分时概念并不局限于上面说的三种，在多道程序环境中，分时系统的概念又增强了许多，而形成多道程序分时共享硬件和软件资源。如果每道程序一次运行一个时间片，而且都是经过用户终端和一个用户相连，用户就可以通过终端与之交互作用。虽然说有多个用户同时在使用该系统，但是他们并不会感觉到其他用户的存在，就好象整个系统就只有他一个人在使用一样，这样的系统称为分时系统或多路系统。我们可以很容易理解分时系统，它有如下特征：（1）同时性，计算机系统能被多个用户同时使用；（2）独立性：用户和用户之间都是独立操作系统的，在同时操作时并不会发生冲突，破坏，混淆等现象；（3）及时性：系统能以最快的速度将结果显示给用户；（4）交互作用性：用户能和电脑进行人机对话。<br/>
-<h5>分时操作系统基本思想</h5>
+<h5 style="color:blue">分时操作系统基本思想</h5>
 &emsp;时间片：是把计算机的系统资源（尤其是CPU时间）进行时间上的分割，每个时间段称为一个时间片，每个用户依次轮流使用时间片。<br/>
 &emsp;分时技术：把处理机的运行时间分为很短的时间片，按时间片轮流把处理机分给各联机作业使用。 <br/>
 &emsp;分时操作系统：是一种联机的多用户交互式的操作系统。一般采用时间片轮转的方式使一台计算机为多个终端服务。对每个用户能保证足够快的响应时间，并提供交互会话能力。 <br/>
 &emsp;设计目标：对用户的请求及时响应，并在可能条件下尽量提高系统资源的利用率。<br/>
   </p>
+  <hr/>
+  <p style="font-size:8px;font-color:grey;text-align:center">© 2018 Steve0618</p>
 </body>
 </html>
