--- a/webview/noip1.htm
+++ b/webview/noip1.htm
@@ -8,6 +8,11 @@
     <h3 style="text-align:center">多任务操作系统</h3>
     &emsp;所谓多道程序设计是指允许多个程序同时进入一个计算机系统的主存储器并运行这些程序的方法。这种多道程序系统也称为多任务操作系统。
     <br/>
+    <h5 style="color:blue">分类</h5>
+&emsp;单用户单任务操作系统：是指一台计算机同时只能有一个用户在使用，该用户一次只能提交一个作业，一个用户独自享用系统的全部硬件和软件资源。（如：MS-DOS、PC-DOS、CP/M）<br/>
+&emsp;单用户多任务操作系统：是指一台计算机同时只能有一个用户使用，但该用户一次可以运行或提交多个作业。（如：windows）（window2000和XP都可以有多个用户，为什么还是单用户呢？因为windows虽然可以设置多个用户，但是同一时候只能让一个用户独享系统的所有资源，所以windows只能是单用户操作系统。因为“多用户”的定义是：允许多个用户通过各自的终端，使用同一台主机，共享主机系统的各类资源）<br/>
+&emsp;多用户与多任务操作系统：是指一台计算机可以同时有多个用户同时使用，并且同时可以执行由多个用户提交的多个任务（如Unix/Linux等）<br/>
+  <h5 style="color:blue">特点</h5>
     &emsp;多任务系统的特点可概括如下：<br/>
 &emsp;&emsp;(1)多道——主存中有两道以上的程序，且这些程序所对应的进程在任一时刻都处于就绪、运行、等待三个状态之一；<br/>
 &emsp;&emsp;(2)宏观上并行——宏观上看，这些程序都正在执行；<br/>
