--- a/webview/Pay_To_Me.html
+++ b/webview/Pay_To_Me.html
@@ -1,5 +1,3 @@
-<div style="text-align:center">
-<h1>Thanks to your kindness!</h1>
-<img src="https://steve0618.github.io/file/image/qwq.png"></img>
+<h1 style="text-align:center">Thanks to your kindness!</h1>
+<img src="https://steve0618.github.io/file/image/qwq.png" align=center></img>
 <hr/><p style="font-size:8px;font-color:grey;text-align:center">© 2018 Steve0618</p>
-</div>
