--- a/file/Vannerglory 3D Model/index.html
+++ b/file/Vannerglory 3D Model/index.html
@@ -11,7 +11,7 @@
 		<h4 style="font-color:blue;text-align:center">
 		This is Vannerglory 3D model.<br/>
 		ONLY for study but not for commercial use.<br/>
-		You're supposed to delete 24 hours later after you've download it.
+		You're supposed to delete it 24 hours later after you've download it.
 		</h4>
 		<br/>
 		<h6 style="text-align:center;;font-family:time">Tap to download</h6>
