--- a/webview/img.html
+++ b/webview/img.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<form action="img.html" method="post">
+<form action="img.html" method="get">
     <input type="text" name="qwq"/>
     <input type="submit" value="show"/>
 </form>
