--- a/webview/img.html
+++ b/webview/img.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <form method="post">
-    <input type="text" name="qwq"/>
+    <input type="text" name="qwq" id="qwq"/>
     <input type="submit" value="show" onclick="fuc(qwq)"/>
 </form>
 <script>
