--- a/webview/Phigros/index.html
+++ b/webview/Phigros/index.html
@@ -416,7 +416,7 @@ Pigeon Games是由初创通过bilibili视频网站发起的、由众多节奏类
 			牛，真的牛<br/>
 			让我一个本来不碰音游的手残党彻底迷上了<br/>
 			虽然直到现在连个EZ5的谱子都摸不到A<br/>
-			但我相信这是迟早的事情
+			但我相信这是迟早的事情<br/>顺带一提，我是这个网站的原作者~
 			</div>
 			<div class="clientinfo">
 			<img src="images/clients/c1.jpg" width="63" alt="" />
