--- a/webview/Phigros/index.html
+++ b/webview/Phigros/index.html
@@ -303,7 +303,7 @@ Pigeon Games是由初创通过bilibili视频网站发起的、由众多节奏类
 <div class="container">
 
 				
-				<div class="rightside">
+				<div class="leftside">
 				<h2>Rrhar'il</h2>
 				<p>
 				Rrhar'il是由Team Grimoire创作的曲目。<br/>
