--- a/webview/Phigros/index.html
+++ b/webview/Phigros/index.html
@@ -299,7 +299,7 @@ Pigeon Games是由初创通过bilibili视频网站发起的、由众多节奏类
 
 
 
-<div class="feature_section ano_feature_section">
+<div class="feature_section ano_feature_section" id="features">
 <div class="container">
 
 				
