--- a/webview/Phigros/index.html
+++ b/webview/Phigros/index.html
@@ -230,7 +230,7 @@ $(document).ready(function() {
 <div class="service_section">
 <div class="container">
 
-			<h2>音律灵动 跃然指尖</h2>
+			<h2>音律灵动  跃然指尖</h2>
 			<h4>《Phigros》是由Pigeon Games（鸽游）开发的节奏类游戏。
 Pigeon Games是由初创通过bilibili视频网站发起的、由众多节奏类游戏爱好者组成的完全用爱发电的项目组。我们希望Phigros新颖的游戏模式和精心制作的插画与关卡可以让你感受到节奏类游戏的魅力。</h4>
 			
@@ -299,11 +299,11 @@ Pigeon Games是由初创通过bilibili视频网站发起的、由众多节奏类
 
 
 
-<div class="feature_section ano_feature_section" id="features">
+<div class="feature_section" id="features">
 <div class="container">
 
 				
-				<div class="rightside">
+				<div class="leftside">
 				<h2>Rrhar'il</h2>
 				<p>
 				Rrhar'il是由Team Grimoire创作的曲目。<br/>
